--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-contracts": "^1.1.1",
     "babel-plugin-trace": "^1.0.0",
     "babel-plugin-typecheck": "^3.6.1",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
