use flow check instead of flow

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "prepublish": "NODE_ENV=production npm run build",
-    "test": "flow && mocha --max-old-space-size=8192 --expose-gc",
+    "test": "flow check && mocha --max-old-space-size=8192 --expose-gc",
     "watch": "mocha --watch --max-old-space-size=8192 --expose-gc",
     "build": "babel -d ./lib ./src",
     "perf": "rm *.cfg; NODE_ENV=production npm run build && node --max-inlined-source-size=2000 --print-opt-code --trace-hydrogen --trace-phase=Z --trace-deopt --code-comments --hydrogen-track-positions --redirect-code-traces --redirect-code-traces-to=code.asm ./perf.js",
